--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="estilo.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
   </head>
   <body>
     <header>
@@ -54,6 +53,19 @@
             <span>Perfil</span>
           </div>
         </a>
+
+        <div class="aside-item" onclick="ToggleDarkMode()">
+          <div class="aside-conteiner">
+          <span class="material-symbols-outlined">dark_mode</span>
+          <span>Dark Mode</span>
+        </div>
+
+        <a href="sobre/sobre-nos.html" class="aside-item">
+          <div class="aside-conteiner">
+            <span>Sobre nós</span>
+          </div>
+        </a>
+
       </aside>
 
       <main>
@@ -62,7 +74,7 @@
           <div class="produtor">
             <img class="chef-img" src="https://thumbs.dreamstime.com/b/avatar-do-cozinheiro-chefe-das-mulheres-com-vetor-da-placa-coberta-na-forma-quadrada-no-%C3%ADcone-quadrado-151664677.jpg">
             <div class="produtor-info">
-              <h2 class="title">Receita1</h2>
+              <h2 class="title">Lasanha de Carne Moida</h2>
               <h3 class="chef-nickname">Cozinheiro1</h3>
             </div>
           </div>
@@ -73,7 +85,7 @@
           <div class="produtor">
             <img class="chef-img" src="https://png.pngtree.com/png-vector/20250518/ourmid/pngtree-cartoon-chef-smiling-and-holding-a-spoon-in-the-kitchen-restaurant-png-image_16313309.png">
             <div class="produtor-info">
-              <h2 class="title">Receita2</h2>
+              <h2 class="title">Coxinha de Frango</h2>
               <h3 class="chef-nickname">Cozinheiro2</h3>
             </div>
           </div>
@@ -84,7 +96,7 @@
           <div class="produtor">
             <img class="chef-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsx57pgHJDkN5gnQgQcfzWOzr_1-EeQqa6hg&s">
             <div class="produtor-info">
-              <h2 class="title">Receita3</h2>
+              <h2 class="title">Cuscuz Tradicional</h2>
               <h3 class="chef-nickname">Cozinheiro3</h3>
             </div>
           </div>
@@ -95,7 +107,7 @@
           <div class="produtor">
             <img class="chef-img" src="https://pm1.aminoapps.com/6575/63ce3166e56478f41ae24c1274211696e66bf1f5_00.jpg">
             <div class="produtor-info">
-              <h2 class="title">Receita4</h2>
+              <h2 class="title">Torta de Frango</h2>
               <h3 class="chef-nickname">Cozinheiro4</h3>
             </div>
           </div>
@@ -104,9 +116,9 @@
         <a href="receita5.html" class="card">
           <img class="card-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzEJ5ijRSJDQp3zqZX4QYuF_T1UYt3xyT5rg&s" alt="Nãoo foi possivel carregar a imagem" >
           <div class="produtor">
-            <img class="chef-img" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fsindrio.com.br%2F2021%2F03%2Fcurso-cozinheiro-basico%2F&psig=AOvVaw0XBlDLEwZu5TNPATT3qr5A&ust=1750539428435000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJjwwtjxgI4DFQAAAAAdAAAAABAE">
+            <img class="chef-img" src="https://img.band.com.br/image/2025/02/20/dede-ficou-ofendido-com-brincadeira-de-jacquin-no-pesadelo-na-cozinha-diz-familia-181318_800x450.webp">
             <div class="produtor-info">
-              <h2 class="title">Receita5</h2>
+              <h2 class="title">Surpresa de Morango</h2>
               <h3 class="chef-nickname">Cozinheiro5</h3>
             </div>
           </div>
@@ -117,7 +129,7 @@
           <div class="produtor">
             <img class="chef-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAi4Qr5pbAwczgc-6y91vv5G8uT-tnqkgMKA&s">
             <div class="produtor-info">
-              <h2 class="title">Receita6</h2>
+              <h2 class="title">Brownie com Gotas</h2>
               <h3 class="chef-nickname">Cozinheiro6</h3>
             </div>
           </div>
