--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
 
       <div class="perfil-items">
-        <a href="Login-Page/loginPage.html">
+        <a href="Account/Login-Page/loginPage.html">
           <div class="header-conteiner hover">
             <span class="material-symbols-outlined"> account_circle </span>
             <span>Fazer Login</span>
